--- a/main.ipynb
+++ b/main.ipynb
@@ -2,21 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "60972128-fc9d-4039-b6fa-9b91e71322fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\xw1nchester\\Desktop\\projects\\llm-testing\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
+    "import time\n",
     "import datetime\n",
     "import requests\n",
     "import pandas as pd\n",
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7aed343d-857c-47a4-8310-f71d40c90943",
    "metadata": {},
    "outputs": [],
@@ -213,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "941002db-01aa-4fba-8968-9bf935567e5b",
    "metadata": {},
    "outputs": [],
@@ -231,10 +223,11 @@
     "        with open(f\"./dataset/{indicator_name}/expected.json\", \"r\", encoding=\"utf-8\") as file:\n",
     "            expected_data = json.loads(file.read())\n",
     "\n",
-    "        # добавить таймер\n",
+    "        start = time.perf_counter()\n",
     "        content = call_llm(base_url, api_key, model, system_message, data)\n",
+    "        end = time.perf_counter()\n",
     "        \n",
-    "        print(f\"response content len: {len(content)}\")\n",
+    "        print(f\"response content len: {len(content)}, duration: {int(end - start)}s\")\n",
     "    \n",
     "        result = json.loads(strip_json_fence(content))\n",
     "        \n",
@@ -261,43 +254,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "c3b85a2b-6875-469b-8acf-c5f6662382fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "models = [\n",
-    "    \"google/gemini-2.0-flash-exp:free\",\n",
     "    \"xiaomi/mimo-v2-flash:free\",\n",
     "    \"mistralai/devstral-2512:free\",\n",
     "    \"qwen/qwen3-coder:free\",\n",
-    "    \"nvidia/nemotron-3-nano-30b-a3b:free\",\n",
-    "    \"tngtech/tng-r1t-chimera:free\",\n",
-    "    \"tngtech/deepseek-r1t2-chimera:free\",\n",
-    "    \"deepseek/deepseek-r1-0528:free\",\n",
-    "    \"tngtech/deepseek-r1t-chimera:free\",\n",
-    "    \"arcee-ai/trinity-mini:free\",\n",
-    "    \"openai/gpt-oss-120b:free\",\n",
-    "    \"openai/gpt-oss-20b:free\",\n",
     "    \"z-ai/glm-4.5-air:free\",\n",
+    "    \"mistralai/mistral-small-3.1-24b-instruct:free\",\n",
+    "    \"nvidia/nemotron-3-nano-30b-a3b:free\",\n",
     "    \"google/gemma-3-27b-it:free\",\n",
+    "    \"nvidia/nemotron-nano-9b-v2:free\",\n",
     "    \"meta-llama/llama-3.3-70b-instruct:free\",\n",
     "    \"meta-llama/llama-3.2-3b-instruct:free\",\n",
-    "    \"nousresearch/hermes-3-llama-3.1-405b:free\",\n",
-    "    \"meta-llama/llama-3.1-405b-instruct:free\",\n",
     "    \"nvidia/nemotron-nano-12b-v2-vl:free\",\n",
-    "    \"nvidia/nemotron-nano-9b-v2:free\",\n",
-    "    \"mistralai/mistral-small-3.1-24b-instruct:free\",\n",
-    "    \"qwen/qwen3-4b:free\",\n",
-    "    \"allenai/molmo-2-8b:free\",\n",
-    "    \"moonshotai/kimi-k2:free\",\n",
-    "    \"cognitivecomputations/dolphin-mistral-24b-venice-edition:free\",\n",
-    "    \"google/gemma-3-4b-it:free\",\n",
-    "    \"google/gemma-3-12b-it:free\",\n",
-    "    \"qwen/qwen-2.5-vl-7b-instruct:free\",\n",
-    "    \"mistralai/mistral-7b-instruct:free\",\n",
-    "    \"google/gemma-3n-e2b-it:free\",\n",
-    "    \"google/gemma-3n-e4b-it:free\",\n",
     "]"
    ]
   },
@@ -306,7 +279,7 @@
    "id": "265e2ed6-fa80-4f26-910a-e11fa586ae4b",
    "metadata": {},
    "source": [
-    "### Потребность работодателей | OR | mistral-small-3.1-24b-instruct"
+    "### Потребность работодателей | OR"
    ]
   },
   {
@@ -451,6 +424,176 @@
     "        api_key=or_key,\n",
     "        model=model,\n",
     "        indicator_name=\"Потребность работодателей\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b70d7188-fe84-4472-b4fa-356f27ba06d5",
+   "metadata": {},
+   "source": [
+    "### ВВП | OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5f4dfa41-2d14-42a9-92d8-b5c8ef51f30d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Источник: ВВП, модель: xiaomi/mimo-v2-flash:free\n",
+      "response content len: 1251\n",
+      "result saved to ./dataset/ВВП\\outputs\\xiaomi-mimo-v2-flash\\2026-01-13_18-17-51.json\n",
+      "Найдено 0 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: mistralai/devstral-2512:free\n",
+      "response content len: 1251\n",
+      "result saved to ./dataset/ВВП\\outputs\\mistralai-devstral-2512\\2026-01-13_18-17-57.json\n",
+      "Найдено 0 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: qwen/qwen3-coder:free\n",
+      "response content len: 1279\n",
+      "result saved to ./dataset/ВВП\\outputs\\qwen-qwen3-coder\\2026-01-13_18-18-31.json\n",
+      "Найдено 14 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: z-ai/glm-4.5-air:free\n",
+      "response content len: 1251\n",
+      "result saved to ./dataset/ВВП\\outputs\\z-ai-glm-4.5-air\\2026-01-13_18-19-06.json\n",
+      "Найдено 0 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: mistralai/mistral-small-3.1-24b-instruct:free\n",
+      "response content len: 1251\n",
+      "result saved to ./dataset/ВВП\\outputs\\mistralai-mistral-small-3.1-24b-instruct\\2026-01-13_18-19-14.json\n",
+      "Найдено 0 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: nvidia/nemotron-3-nano-30b-a3b:free\n",
+      "response content len: 945\n",
+      "result saved to ./dataset/ВВП\\outputs\\nvidia-nemotron-3-nano-30b-a3b\\2026-01-13_18-19-20.json\n",
+      "Найдено 0 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: google/gemma-3-27b-it:free\n",
+      "response content len: 1252\n",
+      "result saved to ./dataset/ВВП\\outputs\\google-gemma-3-27b-it\\2026-01-13_18-19-35.json\n",
+      "Найдено 0 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: nvidia/nemotron-nano-9b-v2:free\n",
+      "response content len: 903\n",
+      "result saved to ./dataset/ВВП\\outputs\\nvidia-nemotron-nano-9b-v2\\2026-01-13_18-19-59.json\n",
+      "Найдено 0 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: meta-llama/llama-3.3-70b-instruct:free\n",
+      "response content len: 1239\n",
+      "result saved to ./dataset/ВВП\\outputs\\meta-llama-llama-3.3-70b-instruct\\2026-01-13_18-21-17.json\n",
+      "Найдено 0 отличий\n",
+      "\n",
+      "Источник: ВВП, модель: meta-llama/llama-3.2-3b-instruct:free\n",
+      "response content len: 891\n",
+      "Произошла ошибка: Extra data: line 1 column 73 (char 72)\n",
+      "\n",
+      "Источник: ВВП, модель: nvidia/nemotron-nano-12b-v2-vl:free\n",
+      "response content len: 1268\n",
+      "result saved to ./dataset/ВВП\\outputs\\nvidia-nemotron-nano-12b-v2-vl\\2026-01-13_18-22-56.json\n",
+      "Найдено 14 отличий\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in models:\n",
+    "    result = call_llm_save_result_and_validate(\n",
+    "        base_url=\"https://openrouter.ai/api/v1\",\n",
+    "        api_key=or_key,\n",
+    "        model=model,\n",
+    "        indicator_name=\"ВВП\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1fa32e1-ca12-4942-aa8a-4c19527e30ad",
+   "metadata": {},
+   "source": [
+    "### ВРП | OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a72617b6-ff16-4003-add2-2f8ad75ce346",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Источник: ВРП, модель: xiaomi/mimo-v2-flash:free\n",
+      "response content len: 69392, duration: 204s\n",
+      "result saved to ./dataset/ВРП\\outputs\\xiaomi-mimo-v2-flash\\2026-01-13_18-43-44.json\n",
+      "Найдено 32 отличий\n",
+      "\n",
+      "Источник: ВРП, модель: mistralai/devstral-2512:free\n",
+      "response content len: 69500, duration: 573s\n",
+      "result saved to ./dataset/ВРП\\outputs\\mistralai-devstral-2512\\2026-01-13_18-53-17.json\n",
+      "Найдено 32 отличий\n",
+      "\n",
+      "Источник: ВРП, модель: qwen/qwen3-coder:free\n",
+      "response content len: 10640, duration: 181s\n",
+      "result saved to ./dataset/ВРП\\outputs\\qwen-qwen3-coder\\2026-01-13_18-56-19.json\n",
+      "Найдено 616 отличий\n",
+      "\n",
+      "Источник: ВРП, модель: z-ai/glm-4.5-air:free\n",
+      "response content len: 68760, duration: 1721s\n",
+      "result saved to ./dataset/ВРП\\outputs\\z-ai-glm-4.5-air\\2026-01-13_19-25-00.json\n",
+      "Найдено 40 отличий\n",
+      "\n",
+      "Источник: ВРП, модель: mistralai/mistral-small-3.1-24b-instruct:free\n",
+      "response content len: 81672, duration: 200s\n",
+      "result saved to ./dataset/ВРП\\outputs\\mistralai-mistral-small-3.1-24b-instruct\\2026-01-13_19-28-21.json\n",
+      "Найдено 32 отличий\n",
+      "\n",
+      "Источник: ВРП, модель: nvidia/nemotron-3-nano-30b-a3b:free\n",
+      "response content len: 51970, duration: 215s\n",
+      "result saved to ./dataset/ВРП\\outputs\\nvidia-nemotron-3-nano-30b-a3b\\2026-01-13_19-31-56.json\n",
+      "Найдено 49 отличий\n",
+      "\n",
+      "Источник: ВРП, модель: google/gemma-3-27b-it:free\n",
+      "response content len: 69388, duration: 674s\n",
+      "result saved to ./dataset/ВРП\\outputs\\google-gemma-3-27b-it\\2026-01-13_19-43-11.json\n",
+      "Найдено 32 отличий\n",
+      "\n",
+      "Источник: ВРП, модель: nvidia/nemotron-nano-9b-v2:free\n",
+      "response content len: 71829, duration: 554s\n",
+      "Произошла ошибка: Extra data: line 3 column 1 (char 49172)\n",
+      "\n",
+      "Источник: ВРП, модель: meta-llama/llama-3.3-70b-instruct:free\n",
+      "response content len: 41598, duration: 500s\n",
+      "Произошла ошибка: Expecting ',' delimiter: line 2350 column 20 (char 41593)\n",
+      "\n",
+      "Источник: ВРП, модель: meta-llama/llama-3.2-3b-instruct:free\n",
+      "response content len: 25596, duration: 909s\n",
+      "Произошла ошибка: Invalid control character at: line 2 column 22 (char 24)\n",
+      "\n",
+      "Источник: ВРП, модель: nvidia/nemotron-nano-12b-v2-vl:free\n",
+      "response content len: 45537, duration: 256s\n",
+      "result saved to ./dataset/ВРП\\outputs\\nvidia-nemotron-nano-12b-v2-vl\\2026-01-13_20-20-11.json\n",
+      "Найдено 448 отличий\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in models:\n",
+    "    result = call_llm_save_result_and_validate(\n",
+    "        base_url=\"https://openrouter.ai/api/v1\",\n",
+    "        api_key=or_key,\n",
+    "        model=model,\n",
+    "        indicator_name=\"ВРП\",\n",
     "    )"
    ]
   },
