--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "60972128-fc9d-4039-b6fa-9b91e71322fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/xw1nchester/Desktop/llm-testing/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import time\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8b0ac772-8493-4b66-9430-d536aaf25980",
    "metadata": {},
    "outputs": [],
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "19b6462f-9d1d-4daf-bc69-b00bc1432b53",
    "metadata": {},
    "outputs": [],
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "602debc8-c1b8-4778-8372-1ea67efbff10",
    "metadata": {},
    "outputs": [],
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "6c84a40b-b4a0-4558-b561-d5055e928821",
    "metadata": {},
    "outputs": [],
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "9853f386-722e-4cf2-a23d-056d66e807ce",
    "metadata": {},
    "outputs": [],
@@ -158,16 +167,16 @@
     "        save_json_data(directory, result)\n",
     "    \n",
     "        differences = get_differences(result, expected_data)\n",
-    "        print(f'Найдено {len(differences)} отличий\\n')\n",
+    "        print(f'{len(differences)} неточностей\\n')\n",
     "    \n",
-    "        return result\n",
+    "        return differences\n",
     "    except Exception as e:\n",
     "        print(f\"Произошла ошибка: {e}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c3b85a2b-6875-469b-8acf-c5f6662382fa",
    "metadata": {},
    "outputs": [],
@@ -508,35 +517,6 @@
     "        model=model,\n",
     "        indicator_name=\"ВРП\",\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "47f2885b-dc63-4bd4-bcbc-555b47a14162",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open(\"./dataset/ВРП/outputs/mistralai-mistral-small-3.1-24b-instruct/2026-01-13_19-28-21.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "    model_output = json.loads(file.read())\n",
-    "\n",
-    "with open(\"./dataset/ВРП/expected.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "    expected_data = json.loads(file.read())\n",
-    "\n",
-    "differences = get_differences(model_output, expected_data)\n",
-    "\n",
-    "differences"
    ]
   },
   {
@@ -1335,6 +1315,167 @@
    ],
    "source": [
     "diff_dict['qwen-qwen3-coder']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbf2ff15-05bd-464e-8282-263937216174",
+   "metadata": {},
+   "source": [
+    "### Ожидаемая продолжительность жизни | OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "21a1c595-448d-4404-a097-082b51a4d78c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Источник: Ожидаемая продолжительность жизни, модель: xiaomi/mimo-v2-flash:free\n",
+      "response content len: 2003, duration: 9s\n",
+      "result saved to ./dataset/Ожидаемая продолжительность жизни/outputs/xiaomi-mimo-v2-flash/2026-01-15_13-51-37.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: mistralai/devstral-2512:free\n",
+      "response content len: 2211, duration: 39s\n",
+      "result saved to ./dataset/Ожидаемая продолжительность жизни/outputs/mistralai-devstral-2512/2026-01-15_13-52-17.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: qwen/qwen3-coder:free\n",
+      "Произошла ошибка: Error code: 429 - {'error': {'message': 'Provider returned error', 'code': 429, 'metadata': {'raw': 'qwen/qwen3-coder:free is temporarily rate-limited upstream. Please retry shortly, or add your own key to accumulate your rate limits: https://openrouter.ai/settings/integrations', 'provider_name': 'OpenInference'}}, 'user_id': 'user_389ikokR4bHu1RS30j92zAFsxqy'}\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: z-ai/glm-4.5-air:free\n",
+      "response content len: 2211, duration: 49s\n",
+      "result saved to ./dataset/Ожидаемая продолжительность жизни/outputs/z-ai-glm-4.5-air/2026-01-15_13-53-10.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: mistralai/mistral-small-3.1-24b-instruct:free\n",
+      "Произошла ошибка: Error code: 404 - {'error': {'message': 'No endpoints found for mistralai/mistral-small-3.1-24b-instruct:free.', 'code': 404}, 'user_id': 'user_389ikokR4bHu1RS30j92zAFsxqy'}\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: nvidia/nemotron-3-nano-30b-a3b:free\n",
+      "response content len: 1926, duration: 11s\n",
+      "result saved to ./dataset/Ожидаемая продолжительность жизни/outputs/nvidia-nemotron-3-nano-30b-a3b/2026-01-15_13-53-22.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: google/gemma-3-27b-it:free\n",
+      "response content len: 2212, duration: 20s\n",
+      "result saved to ./dataset/Ожидаемая продолжительность жизни/outputs/google-gemma-3-27b-it/2026-01-15_13-53-43.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: nvidia/nemotron-nano-9b-v2:free\n",
+      "response content len: 1887, duration: 20s\n",
+      "result saved to ./dataset/Ожидаемая продолжительность жизни/outputs/nvidia-nemotron-nano-9b-v2/2026-01-15_13-54-04.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: meta-llama/llama-3.3-70b-instruct:free\n",
+      "response content len: 2003, duration: 31s\n",
+      "result saved to ./dataset/Ожидаемая продолжительность жизни/outputs/meta-llama-llama-3.3-70b-instruct/2026-01-15_13-54-35.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: meta-llama/llama-3.2-3b-instruct:free\n",
+      "Произошла ошибка: Error code: 404 - {'error': {'message': 'No endpoints found for meta-llama/llama-3.2-3b-instruct:free.', 'code': 404}, 'user_id': 'user_389ikokR4bHu1RS30j92zAFsxqy'}\n",
+      "\n",
+      "Источник: Ожидаемая продолжительность жизни, модель: nvidia/nemotron-nano-12b-v2-vl:free\n",
+      "Произошла ошибка: 'NoneType' object is not subscriptable\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "diff_dict = {}\n",
+    "\n",
+    "for model in models:\n",
+    "    differences = call_llm_save_result_and_validate(\n",
+    "        base_url=\"https://openrouter.ai/api/v1\",\n",
+    "        api_key=or_key,\n",
+    "        model=model,\n",
+    "        indicator_name=\"Ожидаемая продолжительность жизни\",\n",
+    "    )\n",
+    "    diff_dict[model] = differences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "919d37d1-2c78-4524-b98f-0bd1eca77ba9",
+   "metadata": {},
+   "source": [
+    "### Средний возраст | OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3cf42221-e0d5-4d7d-b0ed-a4e2498dc85d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Источник: Средний возраст, модель: xiaomi/mimo-v2-flash:free\n",
+      "response content len: 8178, duration: 31s\n",
+      "result saved to ./dataset/Средний возраст/outputs/xiaomi-mimo-v2-flash/2026-01-15_14-31-47.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Средний возраст, модель: mistralai/devstral-2512:free\n",
+      "response content len: 8190, duration: 75s\n",
+      "result saved to ./dataset/Средний возраст/outputs/mistralai-devstral-2512/2026-01-15_14-33-02.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Средний возраст, модель: qwen/qwen3-coder:free\n",
+      "Произошла ошибка: Error code: 429 - {'error': {'message': 'Provider returned error', 'code': 429, 'metadata': {'raw': 'qwen/qwen3-coder:free is temporarily rate-limited upstream. Please retry shortly, or add your own key to accumulate your rate limits: https://openrouter.ai/settings/integrations', 'provider_name': 'OpenInference'}}, 'user_id': 'user_389ikokR4bHu1RS30j92zAFsxqy'}\n",
+      "\n",
+      "Источник: Средний возраст, модель: z-ai/glm-4.5-air:free\n",
+      "response content len: 0, duration: 72s\n",
+      "Произошла ошибка: Expecting value: line 1 column 1 (char 0)\n",
+      "\n",
+      "Источник: Средний возраст, модель: mistralai/mistral-small-3.1-24b-instruct:free\n",
+      "Произошла ошибка: Error code: 404 - {'error': {'message': 'No endpoints found for mistralai/mistral-small-3.1-24b-instruct:free.', 'code': 404}, 'user_id': 'user_389ikokR4bHu1RS30j92zAFsxqy'}\n",
+      "\n",
+      "Источник: Средний возраст, модель: nvidia/nemotron-3-nano-30b-a3b:free\n",
+      "response content len: 6162, duration: 29s\n",
+      "result saved to ./dataset/Средний возраст/outputs/nvidia-nemotron-3-nano-30b-a3b/2026-01-15_14-34-48.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Средний возраст, модель: google/gemma-3-27b-it:free\n",
+      "response content len: 6366, duration: 47s\n",
+      "result saved to ./dataset/Средний возраст/outputs/google-gemma-3-27b-it/2026-01-15_14-35-36.json\n",
+      "96 неточностей\n",
+      "\n",
+      "Источник: Средний возраст, модель: nvidia/nemotron-nano-9b-v2:free\n",
+      "response content len: 6643, duration: 118s\n",
+      "result saved to ./dataset/Средний возраст/outputs/nvidia-nemotron-nano-9b-v2/2026-01-15_14-37-34.json\n",
+      "4 неточностей\n",
+      "\n",
+      "Источник: Средний возраст, модель: meta-llama/llama-3.3-70b-instruct:free\n",
+      "response content len: 8190, duration: 161s\n",
+      "result saved to ./dataset/Средний возраст/outputs/meta-llama-llama-3.3-70b-instruct/2026-01-15_14-40-16.json\n",
+      "0 неточностей\n",
+      "\n",
+      "Источник: Средний возраст, модель: meta-llama/llama-3.2-3b-instruct:free\n",
+      "Произошла ошибка: Error code: 404 - {'error': {'message': 'No endpoints found for meta-llama/llama-3.2-3b-instruct:free.', 'code': 404}, 'user_id': 'user_389ikokR4bHu1RS30j92zAFsxqy'}\n",
+      "\n",
+      "Источник: Средний возраст, модель: nvidia/nemotron-nano-12b-v2-vl:free\n",
+      "Произошла ошибка: 'NoneType' object is not subscriptable\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "diff_dict = {}\n",
+    "\n",
+    "for model in models:\n",
+    "    differences = call_llm_save_result_and_validate(\n",
+    "        base_url=\"https://openrouter.ai/api/v1\",\n",
+    "        api_key=or_key,\n",
+    "        model=model,\n",
+    "        indicator_name=\"Средний возраст\",\n",
+    "    )\n",
+    "    diff_dict[model] = differences"
    ]
   },
   {
